tests/snapshots/integration__integration_tests__help__help_config.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config - Manage configuration and shell integration
Usage: wt config [OPTIONS] <COMMAND>

Commands:
  shell      Shell integration setup
  create     Create global configuration file
  show       Show configuration files & locations
  cache      Manage caches (CI status, default branch)
  status     Manage branch status markers
  approvals  Manage command approvals

Options:
  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

[32mSetup Guide[0m

1. Set up shell integration

  [2m   wt config shell install[0m

   Or manually add to the shell config:

  [2m   eval "$(wt config shell init bash)"[0m

2. (Optional) Create config file

  [2m   wt config create[0m

   This creates ~/.config/worktrunk/config.toml with examples.

3. (Optional) Enable LLM commit messages

   Install: [2muv tool install -U llm[0m
   Configure: [2mllm keys set anthropic[0m
   Add to config.toml:

  [2m   [commit-generation][0m
  [2m   command = "llm"[0m

[32mLLM Setup Details[0m

For Claude:

  [2mllm install llm-anthropic[0m
  [2mllm keys set anthropic[0m
  [2mllm models default claude-haiku-4-5-20251001[0m

For OpenAI:

  [2mllm keys set openai[0m

Use [2mwt config show[0m to view the current configuration.
Docs: <https://llm.datasette.io/> | <https://github.com/sigoden/aichat>

[32mConfiguration Files[0m

[1mGlobal config[0m (user settings):

- Location: [2m~/.config/worktrunk/config.toml[0m (or [2mWORKTRUNK_CONFIG_PATH[0m)
- Run [2mwt config create --help[0m to view documented examples

[1mProject config[0m (repository hooks):

- Location: [2m.config/wt.toml[0m in repository root
- Contains: post-create, post-start, pre-commit, pre-merge, post-merge hooks
