tests/snapshots/integration__integration_tests__help__help_config_state_logs.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - logs
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state logs - Background operation logs

Usage: [1m[36mwt config state logs[0m [36m[OPTIONS][0m [36m[COMMAND]

[1m[32mCommands:
  [1m[36mget[0m    List background operation log files
  [1m[36mclear[0m  Clear background operation logs

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

View and manage logs from background operations.

[32mWhat's logged

  Operation           Log file                               
  ──────────────────  ───────────────────────────────────────
  post-start hooks    [2m{branch}-{source}-post-start-{name}.log
  Background removal  [2m{branch}-remove.log[0m                    

Source is [2muser[0m or [2mproject[0m depending on where the hook is defined.

[32mLocation

All logs are stored in [2m.git/wt-logs/[0m (in the main worktree's git directory).

[32mBehavior

- [1mOverwrites[0m — Same operation on same branch overwrites previous log
- [1mPersists[0m — Logs from deleted branches remain until manually cleared
- [1mShared[0m — All worktrees write to the same log directory

[32mExamples

List all log files:
  [2mwt config state logs get

View a specific log:
  [2mcat "$(git rev-parse --git-dir)/wt-logs/feature-project-post-start-build.log"

Clear all logs:
  [2mwt config state logs clear
