tests/snapshots/integration__integration_tests__help__help_config_state_marker.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - marker
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state marker - Branch markers

Usage: [1m[36mwt config state marker[0m [36m[OPTIONS][0m [36m[COMMAND]

[1m[32mCommands:
  [1m[36mget[0m    Get marker for a branch
  [1m[36mset[0m    Set marker for a branch
  [1m[36mclear[0m  Clear marker for a branch

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Custom status text or emoji shown in the [2mwt list[0m Status column.

[32mDisplay

Markers appear at the start of the Status column:

  [2mBranch    Status   Path
  [2mmain      ^        ~/code/myproject
  [2mfeature   🚧↑      ~/code/myproject.feature
  [2mbugfix    🤖!↑⇡    ~/code/myproject.bugfix

[32mUse cases

- [1mWork status[0m — [2m🚧[0m WIP, [2m✅[0m ready for review, [2m🔥[0m urgent
- [1mAgent tracking[0m — The Claude Code plugin sets markers automatically
- [1mNotes[0m — Any short text: [2m"blocked"[0m, [2m"needs tests"

[32mStorage

Stored in git config as [2mworktrunk.marker.<branch>[0m. Set directly with:

  [2mgit config worktrunk.marker.feature "🚧"

Without a subcommand, runs [2mget[0m for the current branch. For [2m--branch[0m, use [2mget --branch=NAME[0m.
