tests/snapshots/integration__integration_tests__help__help_list_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - list
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt list - List worktrees and optionally branches
Usage: [1m[36mwt list[0m [36m[OPTIONS][0m
       [1m[36mwt list[0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mstatusline[0m  Single-line status for shell prompts

[1m[32mOptions:[0m
      [1m[36m--format[0m[36m [0m[36m<FORMAT>[0m
          Output format (table, json)
          
          [default: table]

      [1m[36m--branches[0m
          Include branches without worktrees

      [1m[36m--remotes[0m
          Include remote branches

      [1m[36m--full[0m
          Show CI, conflicts, diffs

      [1m[36m--progressive[0m
          Show fast info immediately, update with slow info[0m
          [0m
          Displays local data (branches, paths, status) first, then updates with remote data (CI, upstream) as it arrives. Auto-enabled for TTY.[0m

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

[32mColumns[0m

- [1mBranch:[0m Branch name
- [1mStatus:[0m Quick status symbols (see Status Symbols below)
- [1mHEAD±:[0m Uncommitted changes vs HEAD (+added -deleted lines, staged + unstaged)
- [1mmain↕:[0m Commit count ahead↑/behind↓ relative to main (commits in HEAD vs main)
- [1mmain…±[0m ([2m--full[0m): Line diffs in commits ahead of main (+added -deleted)
- [1mPath:[0m Worktree directory location
- [1mRemote⇅:[0m Commits ahead⇡/behind⇣ relative to tracking branch (e.g. [2morigin/branch[0m)
- [1mCI[0m ([2m--full[0m): CI pipeline status (tries PR/MR checks first, falls back to branch workflows)
  - [2m●[0m [1mpassed[0m (green) - All checks passed
  - [2m●[0m [1mrunning[0m (blue) - Checks in progress
  - [2m●[0m [1mfailed[0m (red) - Checks failed
  - [2m●[0m [1mconflicts[0m (yellow) - Merge conflicts with base
  - [2m●[0m [1mno-ci[0m (gray) - PR/MR or workflow found but no checks configured
  - [1m(blank)[0m - No PR/MR or workflow found, or [2mgh[0m/[2mglab[0m CLI unavailable
  - [1m(dimmed)[0m - Stale: unpushed local changes differ from PR/MR head
- [1mCommit:[0m Short commit hash (8 chars)
- [1mAge:[0m Time since last commit (relative)
- [1mMessage:[0m Last commit message (truncated)

[32mStatus Symbols[0m

Order: [2m+!? ✖⚠≡_ ↻⋈ ↑↓↕ ⇡⇣⇅ ⎇⌫⊠[0m

- [2m+[0m Staged files (ready to commit)
- [2m![0m Modified files (unstaged changes)
- [2m?[0m Untracked files present
- [2m✖[0m [1mMerge conflicts[0m - unresolved conflicts in working tree (fix before continuing)
- [2m⊘[0m [1mWould conflict[0m - merging into main would fail
- [2m≡[0m Working tree matches main (identical contents, regardless of commit history)
- [2m_[0m No commits (no commits ahead AND no uncommitted changes)
- [2m↻[0m Rebase in progress
- [2m⋈[0m Merge in progress
- [2m↑[0m Ahead of main branch
- [2m↓[0m Behind main branch
- [2m↕[0m Diverged (both ahead and behind main)
- [2m⇡[0m Ahead of remote tracking branch
- [2m⇣[0m Behind remote tracking branch
- [2m⇅[0m Diverged (both ahead and behind remote)
- [2m⎇[0m Branch indicator (shown for branches without worktrees)
- [2m⌫[0m Prunable worktree (directory missing, can be pruned)
- [2m⊠[0m Locked worktree (protected from auto-removal)

Rows are dimmed when there's no marginal contribution ([2m≡[0m matches main OR [2m_[0m no commits).

[32mJSON Output[0m

Use [2m--format=json[0m for structured data. Each object contains two status maps
with the same fields in the same order as Status Symbols above:

[1m`status`[0m - variant names for querying:

- [2mworking_tree[0m: [2m{untracked, modified, staged, renamed, deleted}[0m booleans
- [2mbranch_state[0m: [2m""[0m | [2m"Conflicts"[0m | [2m"MergeTreeConflicts"[0m | [2m"MatchesMain"[0m | [2m"NoCommits"[0m
- [2mgit_operation[0m: [2m""[0m | [2m"Rebase"[0m | [2m"Merge"[0m
- [2mmain_divergence[0m: [2m""[0m | [2m"Ahead"[0m | [2m"Behind"[0m | [2m"Diverged"[0m
- [2mupstream_divergence[0m: [2m""[0m | [2m"Ahead"[0m | [2m"Behind"[0m | [2m"Diverged"[0m
- [2muser_status[0m: string (optional)

[1m`status_symbols`[0m - Unicode symbols for display (same fields, plus [2mworktree_attrs[0m: ⎇/⌫/⊠)

Note: [2mlocked[0m and [2mprunable[0m are top-level fields on worktree objects, not in status.

[1mWorktree position fields[0m (for identifying special worktrees):

- [2mis_main[0m: boolean - is the main/default worktree
- [2mis_current[0m: boolean - is the current working directory (present when true)
- [2mis_previous[0m: boolean - is the previous worktree from [2mwt switch[0m (present when true)

[1mQuery examples:[0m

  [2m# Find worktrees with conflicts[0m
  [2mjq '.[] | select(.status.branch_state == "Conflicts")'[0m
  [2m[0m
  [2m# Find worktrees with untracked files[0m
  [2mjq '.[] | select(.status.working_tree.untracked)'[0m
  [2m[0m
  [2m# Find worktrees in rebase or merge[0m
  [2mjq '.[] | select(.status.git_operation != "")'[0m
  [2m[0m
  [2m# Get branches ahead of main[0m
  [2mjq '.[] | select(.status.main_divergence == "Ahead")'[0m
  [2m[0m
  [2m# Find locked worktrees[0m
  [2mjq '.[] | select(.locked != null)'[0m
  [2m[0m
  [2m# Get current worktree info (useful for statusline tools)[0m
  [2mjq '.[] | select(.is_current == true)'[0m
