tests/snapshots/integration__integration_tests__help__help_md_root.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - "--help-md"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----
wt - Git worktree management for parallel AI agent workflows

Usage: wt [OPTIONS] [COMMAND]

Commands:
  switch  Switch to a worktree
  list    List worktrees and their status
  remove  Remove worktree; delete branch if merged
  merge   Merge worktree into target branch
  select  Interactive worktree selector
  step    Run individual operations
  hook    Run configured hooks
  config  Manage configuration and shell integration

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

Getting started

  wt switch --create feature    # Create worktree and branch
  wt switch feature             # Switch to worktree
  wt list                       # Show all worktrees
  wt remove                     # Remove worktree; delete branch if merged

Run `wt config shell install` to set up directory switching.
Run `wt config create` to customize worktree locations.

Docs: https://worktrunk.dev
GitHub: https://github.com/max-sixty/worktrunk


----- stderr -----
